# mlops-fraud-detection

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  download_data.sh  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
api/logs/: predictions.jsonl
configs/: train_config.yaml
docker/: Dockerfile.api  Dockerfile.train  docker-compose.yml
mlruns/: mlflow.db
mlruns/1/839283adad59408e9f06652f1d60c103/artifacts/: classification_report.txt
mlruns/1/models/m-85006673b8b84e389b55dc12079c1923/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json
notebooks/: 01_eda.ipynb
src/: __init__.py
src/data/: __init__.py  loader.py  quality_gate.py
src/evaluation/: __init__.py  drift_detector.py  metrics.py  plots.py
src/models/: __init__.py  compare.py  train.py
src/preprocessing/: __init__.py  cleaner.py  features.py
tests/: conftest.py  test_model.py  test_preprocessing.py  test_quality_gate.py
